--- a/app/src/main/res/layout/include_searchbar.xml
+++ b/app/src/main/res/layout/include_searchbar.xml
@@ -1,9 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="60dp"
+    app:layout_scrollFlags="scroll|enterAlways"
     android:background="@color/colorPrimary"
-    android:translationZ="5dp"
     android:orientation="horizontal">
 
     <LinearLayout
