--- a/app/src/main/res/layout/sheet_details.xml
+++ b/app/src/main/res/layout/sheet_details.xml
@@ -79,7 +79,7 @@
                     tools:ignore="RtlHardcoded" />
 
                 <ImageView
-                    android:id="@+id/btn_favorito"
+                    android:id="@+id/btn_like"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_gravity="right|center"
