--- a/app/src/main/res/layout/cell_end_magazines.xml
+++ b/app/src/main/res/layout/cell_end_magazines.xml
@@ -1,32 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_main_1_4_1"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="250dp"
+    android:layout_marginBottom="@dimen/text_margin"
+    android:layout_marginEnd="4dp"
+    android:layout_marginStart="@dimen/main_card_margin_horizontal"
+    android:layout_marginTop="@dimen/main_card_margin_vertical"
+    android:layout_weight="1"
+    android:background="?attr/selectableItemBackground"
+    android:foreground="?attr/selectableItemBackground"
+    card_view:cardCornerRadius="@dimen/card_recycler_corner_radius"
+    card_view:cardElevation="@dimen/card_recycler_elevation">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_main_1_4_1"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/rl_pai"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_marginBottom="@dimen/text_margin"
-        android:layout_marginStart="@dimen/main_card_margin_horizontal"
-        android:layout_marginTop="@dimen/main_card_margin_vertical"
-        android:background="?attr/selectableItemBackground"
-        android:foreground="?attr/selectableItemBackground"
-        card_view:cardCornerRadius="@dimen/card_recycler_corner_radius"
-        card_view:cardElevation="@dimen/card_recycler_elevation"
-        card_view:cardUseCompatPadding="true">
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imgMagazine"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            android:contentDescription="@string/cover_description" />
+            android:background="@drawable/bg1"
+            android:contentDescription="@string/cover_description"
+            android:scaleType="centerCrop" />
 
-    </android.support.v7.widget.CardView>
+        <Button
+            android:id="@+id/btnRetry"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:layout_marginBottom="80dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/btn"
+            android:text="@string/end_list"
+            android:textColor="@color/ColorSupremeWhite"
+            android:textSize="10dp"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent"
+            card_view:layout_constraintVertical_bias="0.622" />
 
-</LinearLayout>
+    </android.support.constraint.ConstraintLayout>
+
+
+</android.support.v7.widget.CardView>
 
