--- a/app/src/main/res/layout/dialog_info_magazine.xml
+++ b/app/src/main/res/layout/dialog_info_magazine.xml
@@ -83,7 +83,7 @@
                     android:textColor="@color/colorPrimary" />
 
                 <ImageView
-                    android:id="@+id/btn_favorito"
+                    android:id="@+id/btn_like"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="?attr/selectableItemBackgroundBorderless"
