--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,5 +12,6 @@
     <dimen name="main_card_margin_horizontal">8dp</dimen>
     <dimen name="main_card_margin_vertical">8dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="rouder_btn">5dp</dimen>
 
 </resources>
