--- a/app/src/main/res/layout/sheet_details.xml
+++ b/app/src/main/res/layout/sheet_details.xml
@@ -21,7 +21,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp">
 
             <View
                 android:layout_width="30dp"
@@ -41,12 +43,10 @@
                 android:textStyle="bold" />
 
             <LinearLayout
-                android:paddingTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp">
+                android:paddingTop="20dp">
 
                 <TextView
                     android:id="@+id/moreDetailsInWeb"
@@ -91,12 +91,10 @@
             </LinearLayout>
 
             <LinearLayout
-                android:paddingTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp">
+                android:paddingTop="10dp">
 
                 <TextView
                     android:id="@+id/formatMagazine"
@@ -134,7 +132,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="15dp">
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp">
 
                 <TextView
                     android:id="@+id/textMagazine"
