--- a/app/src/main/res/layout/activity_magazine.xml
+++ b/app/src/main/res/layout/activity_magazine.xml
@@ -13,12 +13,16 @@
     <include layout="@layout/sheet_details" />
 
     <TextView
+        android:padding="10dp"
+        android:textSize="19sp"
+        android:text="Poster"
         android:id="@+id/numberMagazineActivity"
-        android:layout_width="50dp"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_margin="18dp"
         android:background="@drawable/number_round"
         android:gravity="center"
+        android:minWidth="50dp"
         android:textColor="@color/Color_Palet_Flat_CLOUDS"
         android:tint="@android:color/white"
         app:layout_anchor="@id/bottom_sheet"
