ViewUtils code added, getMagazineTitleWithoutNumber() return titile without number

--- a/app/src/main/res/layout/dialog_info_magazine.xml
+++ b/app/src/main/res/layout/dialog_info_magazine.xml
@@ -52,7 +52,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:paddingTop="10dp"
+                    android:padding="10dp"
                     android:id="@+id/magazineName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
